added main activity; updated manifest accordingly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">NavigationDrawerTemplate</string>
+    <string name="tmp">Hello World!</string>
 </resources>
