--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">NavigationDrawerTemplate</string>
     <string name="tmp">Hello World!</string>
+    <string name="drawer_open">"Open State"</string>
+    <string name="drawer_closed">"Closed State"</string>
 </resources>
